--- a/src/main/resources/at/ac/fhcampuswien/fhmdb/watchlist.fxml
+++ b/src/main/resources/at/ac/fhcampuswien/fhmdb/watchlist.fxml
@@ -1,21 +1,40 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXListView?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.layout.Region?>
 
-<?import com.jfoenix.controls.JFXButton?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.text.Font?>
-<?import com.jfoenix.controls.JFXListView?>
 <VBox prefHeight="331.0" prefWidth="570.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.ac.fhcampuswien.fhmdb.WatchlistController">
-    <Label text="Watchlist" style="-fx-background-color: F5C518;">
-        <font>
-            <Font name="Calibri Bold" size="24.0" />
-        </font>
+    <HBox alignment="CENTER_LEFT" prefHeight="42.0" prefWidth="570.0" spacing="20.0" style="-fx-background-color: black;">
         <padding>
-            <Insets left="10.0" right="10.0" top="5.0" />
+            <Insets bottom="7.0" left="10.0" top="7.0" />
         </padding>
-    </Label>
+        <children>
+            <Label style="-fx-background-color: F5C518;" text="FHMDb">
+                <font>
+                    <Font name="Calibri Bold" size="24.0" />
+                </font>
+                <padding>
+                    <Insets left="2.0" right="2.0" />
+                </padding>
+            </Label>
+            <Label styleClass="text-white" stylesheets="@styles.css" text="Welcome to FHMDb!" />
+            <Region HBox.hgrow="ALWAYS"/>
+            <Label style="-fx-background-color: F5C518;" text="Watchlist">
+                <font>
+                    <Font name="Calibri Bold" size="24.0" />
+                </font>
+                <padding>
+                    <Insets left="2.0" right="2.0" />
+                </padding>
+            </Label>
+        </children>
+    </HBox>
+    <!-- Bestehender Inhalt der Watchlist-View -->
     <JFXListView fx:id="watchlistListView" styleClass="background-black" style="-fx-background-color: black;" stylesheets="@styles.css" VBox.vgrow="ALWAYS" />
     <VBox.margin>
         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
