--- a/src/main/resources/at/ac/fhcampuswien/fhmdb/watchlist.fxml
+++ b/src/main/resources/at/ac/fhcampuswien/fhmdb/watchlist.fxml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<?import com.jfoenix.controls.JFXButton?>
-<?import com.jfoenix.controls.JFXListView?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.layout.Region?>
 
-<VBox prefHeight="331.0" prefWidth="570.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.ac.fhcampuswien.fhmdb.WatchlistController">
+<?import com.jfoenix.controls.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
+
+<VBox prefHeight="331.0" prefWidth="570.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.ac.fhcampuswien.fhmdb.WatchlistController">
     <HBox alignment="CENTER_LEFT" prefHeight="42.0" prefWidth="570.0" spacing="20.0" style="-fx-background-color: black;">
         <padding>
             <Insets bottom="7.0" left="10.0" top="7.0" />
@@ -23,7 +21,6 @@
                 </padding>
             </Label>
             <Label styleClass="text-white" stylesheets="@styles.css" text="Welcome to FHMDb!" />
-            <Region HBox.hgrow="ALWAYS"/>
             <Label style="-fx-background-color: F5C518;" text="Watchlist">
                 <font>
                     <Font name="Calibri Bold" size="24.0" />
@@ -32,16 +29,17 @@
                     <Insets left="2.0" right="2.0" />
                 </padding>
             </Label>
+            <Region HBox.hgrow="ALWAYS" />
         </children>
     </HBox>
     <!-- Bestehender Inhalt der Watchlist-View -->
-    <JFXListView fx:id="watchlistListView" styleClass="background-black" style="-fx-background-color: black;" stylesheets="@styles.css" VBox.vgrow="ALWAYS" />
+    <JFXListView fx:id="watchlistListView" style="-fx-background-color: black;" styleClass="background-black" stylesheets="@styles.css" VBox.vgrow="ALWAYS" />
+    <HBox>
+
+        <Region HBox.hgrow="ALWAYS" /> <!-- Spacer -->
+        <JFXButton fx:id="homeBtn" onAction="#returnToHomeScreen" styleClass="background-yellow" stylesheets="@styles.css" text="Back to Home" />
+    </HBox>
     <VBox.margin>
         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
     </VBox.margin>
-    <HBox>
-
-        <Region HBox.hgrow="ALWAYS"/> <!-- Spacer -->
-        <JFXButton fx:id="homeBtn" styleClass="background-yellow" stylesheets="@styles.css" text="Back to Home" onAction="#returnToHomeScreen" />
-    </HBox>
 </VBox>
